add mvc processor